<resources>
    <string name="app_name">OnlineStore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_products">جدیدترین محصولات </string>
    <string name="most_visited_products">پربازدیدترین محصولات </string>
    <string name="best_products"> پرفروش ترین محصولات </string>
    <string name="recommended_products"> پیشنهاد ویژه </string>

    <string name="add_to_cart"> افزودن به سبد خرید </string>

    <string name="home"> خانه </string>
    <string name="category"> دسته بندی محصولات </string>
    <string name="login_or_signup">ورود و ثبت نام</string>
    <string name="enter">ورود </string>
    <string name="sign_up"> ثبت نام</string>
    <string name="cart">سبد خرید</string>
    <string name="your_cart">سبد خرید شما</string>
    <string name="complete_list"> لیست کامل</string>

    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="error_no_connection">خطا دراتصال به اینترنت!</string>
    <string name="check_connection">بررسی تنظیمات شبکه</string>
    <string name="try_again">تلاش مجدد</string>

    <string name="total_price">قیمت کل</string>
    <string name="toman"> تومان</string>
    <string name="sale_price">تخفیف</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="hint_text_phone_number">  شماره موبایل یا ایمیل </string>
    <string name="hint_text_password">  کلمه عبور </string>
</resources>
