<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.NoConnectionFragment">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_signal_wifi_off_24dp"
   />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/error_no_connection"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/check_connection"
        />

    <Button
        android:layout_width="200dp"
        android:padding="8dp"
        android:id="@+id/button_try_again"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/background"
        android:text="@string/try_again"
        />

</LinearLayout>