<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark_background"
    tools:context=".View.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.glide.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:background="#E8FFFCFC"
            android:layout_height="200dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D83B4146"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="4dp"
            android:text="@string/recent_products" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recent_products_recycler_view"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D83B4146"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="4dp"
            android:text="@string/best_products" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/best_products_recycler_view"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#D83B4146"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/most_visited_products" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/most_visited_recycler_view"/>


    </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>